@@ -19,6 +19,7 @@ import org.elako.idleprison.items.notas.NotaManager;
 import org.elako.idleprison.mina.BloqueManager;
 import org.elako.idleprison.mina.MinaManager;
 import org.elako.idleprison.player.*;
+import org.elako.idleprison.player.idle.IdleManager;
 import org.elako.idleprison.player.rango.Rangos;
 import org.elako.idleprison.player.rango.RangosManager;
 
@@ -209,45 +210,35 @@ public final class IdlePrison extends JavaPlugin {
 
         String diferenciaDinero = "";
         if(playerManager.getDiferenciaDinero(p.getName()) > 0.0) { // positivo
-             diferenciaDinero = " + " + DineroManager.dineroToString(diferencia);
+             diferenciaDinero = " + " + DineroManager.dineroToString(diferencia,true);
         } else if (diferencia < 0.0) { // negativo
-            diferenciaDinero = " - " + DineroManager.dineroToString( Math.abs(diferencia) );
-
-        }
+            diferenciaDinero = " - " + DineroManager.dineroToString( Math.abs(diferencia),true );
+        } else diferenciaDinero = "E";
 
         playerManager.reiniciarDiferenciaDinero(p.getName());
 
-        List<String> lineas;
+
+
         String s = ChatColor.WHITE + String.valueOf(sr.toUpperCase().charAt(0)) + sr.substring(1).toLowerCase();
-        if (rango.isPermitido(p.getName(),Rangos.CAMPESINO1) || treeskill.getDineroRenacer(p.getName()) > 0 ) {
-             lineas = Arrays.asList(
-                    ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Dinero: " + ChatColor.WHITE + DineroManager.dineroToString(d) + diferenciaDinero,
-                    ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Rango: ",
-                     s,
-                    ChatColor.WHITE + "Siguiente: " + rango.siguienteRango(p.getName()).toLowerCase() ,
-                    ChatColor.WHITE + "Necesario: " + DineroManager.dineroToString(ascender),
-                    ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Acumulado en idle: ",
-                    ChatColor.WHITE + "Dinero: " + DineroManager.dineroToString(playerManager.getDineroAcum(p.getName())),
-                    ChatColor.WHITE + "Tiempo: " + IdleManager.tiempoToString(playerManager.getPlayer(p.getName()).getTimeTotal()),
-                    ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Renacer: ",
-                    ChatColor.WHITE + "Nivel: "+ treeskill.getNivelRenacer(p.getName()),
-                    ChatColor.WHITE + "Nivel tras renacer: "+ treeskill.getNivelTotal(p.getName()),
-                    ChatColor.WHITE + "Siguiente nivel: " + DineroManager.dineroToString( treeskill.ascenderRestos( treeskill.getDineroTotal(p.getName()) ) )
-
-
-            );
-        } else
-            lineas = Arrays.asList(
-                ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Dinero: " + ChatColor.WHITE + DineroManager.dineroToString(d) + diferenciaDinero,
-                ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Rango: ",
-                    s,
+        LinkedList<String> lineas = new LinkedList<>( List.of(
+                ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Dinero: " + ChatColor.WHITE + DineroManager.dineroToString(d, false) + diferenciaDinero,
+                ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Rango: ", s,
                 ChatColor.WHITE + "Siguiente: " + rango.siguienteRango(p.getName()).toLowerCase() ,
-                ChatColor.WHITE + "Necesario: " + DineroManager.dineroToString(ascender),
+                ChatColor.WHITE + "Necesario: " + DineroManager.dineroToString(ascender, true),
                 ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Acumulado en idle: ",
-                ChatColor.WHITE + "Dinero: " + DineroManager.dineroToString(playerManager.getDineroAcum(p.getName())),
+                ChatColor.WHITE + "Dinero: " + DineroManager.dineroToString(playerManager.getDineroAcum(p.getName()), true),
                 ChatColor.WHITE + "Tiempo: " + IdleManager.tiempoToString(playerManager.getPlayer(p.getName()).getTimeTotal())
+        ) );
 
-        );
+        if (rango.isPermitido(p.getName(),Rangos.CAMPESINO1) || treeskill.getDineroRenacer(p.getName()) > 0 ) {
+            lineas.addAll( List.of(
+                    ChatColor.WHITE + String.valueOf(ChatColor.BOLD) + "Renacer: ",
+                    ChatColor.WHITE + "Nivel: " + treeskill.getNivelRenacer(p.getName()),
+                    ChatColor.WHITE + "Nivel tras renacer: " + treeskill.getNivelTotal(p.getName()),
+                    ChatColor.WHITE + "Siguiente nivel: " + DineroManager.dineroToString(treeskill.ascenderRestos(treeskill.getDineroTotal(p.getName())), true)
+            ) );
+        }
+
         for (int i = 0; i < lineas.size(); i++) {
             Score score = objetivo.getScore(lineas.get(i));
             score.setScore(lineas.size()-i);
@@ -294,7 +285,7 @@ public final class IdlePrison extends JavaPlugin {
         VenderManager vender = new VenderManager(dinero, rango, playerManager);
         NotaManager nota = new NotaManager(dinero, playerManager);
         BloqueManager bloque = new BloqueManager();
-        idle = new IdleManager(dinero,playerManager);
+        idle = new IdleManager(dinero,playerManager, rango);
         mina = new MinaManager(rango);
         treeskill = new TreeSkillManager(playerManager,rango,mina);
         CrafteoManager crafteo = new CrafteoManager(rango);
